<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/filter_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:text="@string/filter_by"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <RadioGroup
        android:id="@+id/filter_options"
        android:checkedButton="@+id/radio_button_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filter_title">
        <RadioButton
            android:id="@+id/filter_all_recipes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/all_recipes"/>
        <RadioButton
            android:id="@+id/filter_by_keywords"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/recipe_keywords"/>
        <RadioButton
            android:id="@+id/filter_by_ingredients"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/details_ingredients"/>
        <RadioButton
            android:id="@+id/filter_by_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/details_prep_time"/>
    </RadioGroup>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filter_search_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/filter_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filter_options">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/filter_search_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>